@@ -1,11 +1,16 @@
 Changes in Version 0.7-5
 
+  o  Functions ReadFile and WriteFile have been embedded into the ImportData and 
+     ExportData functions, respectively.
+  
+  o  Additional arguments have been added to the Export Data GUI.
+
   o  In Import Data GUI, added decimal and encoding arguments and custom entries
      for separator, NA strings, and comment parameters.
 
 Changes in Version 0.7-4
 
-  o  Main GUI is lauched automatically when RSurvey is loaded.
+  o  Main GUI is launched automatically when RSurvey is loaded.
   
   o  Added View Data for single variable.
   
